Renamed all *.cs files to *.shared.cs in the Xamarin project in preparation for the inclusion of iOS and Android specific code files.

--- a/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
+++ b/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
@@ -28,7 +28,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Update="Controls\UmbrellaActivityInidicatorView.xaml">
+	  <Compile Update="Controls\UmbrellaActivityInidicatorView.shared.xaml.cs">
+	    <DependentUpon>UmbrellaActivityInidicatorView.shared.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Controls\UmbrellaActivityInidicatorView.shared.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </EmbeddedResource>
 	</ItemGroup>
