Revert "Renamed all *.cs files to *.shared.cs in the Xamarin project in preparation for the inclusion of iOS and Android specific code files."
This reverts commit 01fa65f97aafd13ea075687f7ca1b4ed23403005.

--- a/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
+++ b/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
@@ -28,13 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Controls\UmbrellaActivityInidicatorView.shared.xaml.cs">
-	    <DependentUpon>UmbrellaActivityInidicatorView.shared.xaml</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Update="Controls\UmbrellaActivityInidicatorView.shared.xaml">
+	  <EmbeddedResource Update="Controls\UmbrellaActivityInidicatorView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </EmbeddedResource>
 	</ItemGroup>
