--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
@@ -18,7 +18,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package contains a range of utility classes to aid web application development.
     </Description>
@@ -38,10 +38,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.3" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
