--- a/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
@@ -17,7 +17,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package contains an implementation of the IDynamicImageResizer built using the .NET Core wrapper for FreeImage. The repo for this wrapper can be found on github: https://github.com/matgr1/FreeImage-dotnet-core
     </Description>
@@ -27,10 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="FreeImage-dotnet-core" Version="4.3.6" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
