--- a/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.AzureStorage/Umbrella.FileSystem.AzureStorage.csproj
@@ -18,7 +18,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package contains implementations of the Umbrella.FileSystem.Abstractions types using Azure Blob Storage as the storage mechanism.
     </Description>
@@ -27,10 +27,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
