--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net.Azure/Umbrella.Extensions.Logging.Log4Net.Azure.csproj
@@ -18,7 +18,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package builds on the Umbrella.Extensions.Logging.Azure package by writing log messages to Azure Table Storage.
     </Description>
@@ -28,10 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
