--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
@@ -18,7 +18,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package contains implementations of the ILogger and ILoggerProvider to allow log4net to be used with the Microsoft.Extensions.Logging infrastructure.
     </Description>
@@ -29,10 +29,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
   
 </Project>
