--- a/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Aurelia.Tools/Umbrella.TypeScript.Aurelia.Tools.csproj
@@ -21,7 +21,7 @@
     <Version>2.9.9</Version>
     <Authors>Richard Edwards</Authors>
     <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
+    <Copyright>Zinofi Digital Ltd 2021</Copyright>
     <Description>
       This package contains .NET Core tooling to allow the Umbrella.TypeScript.Aurelia generators to be used with the dotnet CLI.
     </Description>
@@ -30,10 +30,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
