--- a/Logging/src/Umbrella.Extensions.Logging.AppCenter/Umbrella.Extensions.Logging.AppCenter.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.AppCenter/Umbrella.Extensions.Logging.AppCenter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0</TargetFrameworks>
@@ -13,7 +13,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.3.0" />
 		<PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.3.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.16" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.17" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
