--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities/Umbrella.AspNetCore.WebUtilities.csproj
@@ -16,12 +16,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\Core\src\Umbrella.AppFramework.Shared\Umbrella.AppFramework.Shared.csproj" />
 		<ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
 		<ProjectReference Include="..\..\..\DataAccess\src\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
 		<ProjectReference Include="..\..\..\Core\src\Umbrella.WebUtilities\Umbrella.WebUtilities.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.21" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 	</ItemGroup>
 
