--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.21" />
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.21" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.21" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="3.1.21" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 		<PackageReference Include="System.Buffers" Version="4.5.1" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
