--- a/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.DataAnnotations/Umbrella.AspNetCore.DataAnnotations.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<DocumentationFile>bin\Release\netcoreapp3.1\Umbrella.AspNetCore.DataAnnotations.xml</DocumentationFile>
+		<TargetFramework>net5.0</TargetFramework>
+		<DocumentationFile>bin\Release\net5.0\Umbrella.AspNetCore.DataAnnotations.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
