--- a/AspNetCore/src/Umbrella.AspNetCore.Identity.EntityFrameworkCore/Umbrella.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Identity.EntityFrameworkCore/Umbrella.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<DocumentationFile>bin\Release\netcoreapp3.1\Umbrella.AspNetCore.Identity.EntityFrameworkCore.xml</DocumentationFile>
+		<TargetFramework>net5.0</TargetFramework>
+		<DocumentationFile>bin\Release\net5.0\Umbrella.AspNetCore.Identity.EntityFrameworkCore.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
