--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,12 +1,15 @@
 <Project>
 	<PropertyGroup>
-		<Version>3.0.0-preview-0293</Version>
+		<Version>5.0.0-preview-0001</Version>
 
 		<Nullable>enable</Nullable>
 		<WarningsAsErrors>nullable</WarningsAsErrors>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 
+		<!-- Disabling these in favour of manually adding the using statements further down. This is to ensure compatibility with legacy .NET packages.  -->
+		<ImplicitUsings>false</ImplicitUsings>
+		
 		<!-- NuGet settings -->
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
@@ -28,4 +31,14 @@
 		<DefineConstants>AzureDevOps</DefineConstants>
 		<DebugType>embedded</DebugType>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<Using Include="System" />
+		<Using Include="System.Collections.Generic" />
+		<Using Include="System.IO" />
+		<Using Include="System.Linq" />
+		<Using Include="System.Net" />
+		<Using Include="System.Threading" />
+		<Using Include="System.Threading.Tasks" />
+	</ItemGroup>
 </Project>
