--- a/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
@@ -17,12 +17,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
 	</ItemGroup>
 	
 </Project>
