Initial changes to the UmbrellaGrid with .NET 6 changes.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -46,4 +46,8 @@
 	  <Folder Include="wwwroot\" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Using Include="Umbrella.Utilities.Extensions" />
+	</ItemGroup>
+
 </Project>
