Fixes Updated version to 6.0.0-preview-0012

--- a/Core/src/Umbrella.AppFramework/Umbrella.AppFramework.csproj
+++ b/Core/src/Umbrella.AppFramework/Umbrella.AppFramework.csproj
@@ -23,4 +23,8 @@
 	  <ProjectReference Include="..\Umbrella.AppFramework.Shared\Umbrella.AppFramework.Shared.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Using Include="Umbrella.AppFramework.Extensions" />
+	</ItemGroup>
+	
 </Project>
