Code docs (WIP) Initial mapperly implementation.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,6 +4,7 @@
 
 		<Nullable>enable</Nullable>
 		<WarningsAsErrors>nullable</WarningsAsErrors>
+		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 
