--- a/Legacy/src/Umbrella.Legacy.WebUtilities/Umbrella.Legacy.WebUtilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/Umbrella.Legacy.WebUtilities.csproj
@@ -45,4 +45,8 @@
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<Using Include="Umbrella.Utilities.Extensions" />
+	</ItemGroup>
+
 </Project>
