--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore.SqlServer/Umbrella.DataAccess.EntityFrameworkCore.SqlServer.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore.SqlServer/Umbrella.DataAccess.EntityFrameworkCore.SqlServer.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
+	  <ProjectReference Include="..\Umbrella.DataAccess.EntityFrameworkCore\Umbrella.DataAccess.EntityFrameworkCore.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
