--- a/Core/src/Umbrella.AppFramework.Shared/Umbrella.AppFramework.Shared.csproj
+++ b/Core/src/Umbrella.AppFramework.Shared/Umbrella.AppFramework.Shared.csproj
@@ -26,4 +26,11 @@
 		<Using Include="Umbrella.AppFramework.Shared.Exceptions" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
