--- a/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
@@ -21,5 +21,12 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
 	
 </Project>
