--- a/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
+++ b/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
@@ -35,4 +35,11 @@
     <ProjectReference Include="..\..\src\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
