--- a/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.Test/Umbrella.AspNetCore.WebUtilities.Test.csproj
+++ b/AspNetCore/test/Umbrella.AspNetCore.WebUtilities.Test/Umbrella.AspNetCore.WebUtilities.Test.csproj
@@ -36,4 +36,11 @@
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
