--- a/Internal/src/Umbrella.Internal.Mocks/Umbrella.Internal.Mocks.csproj
+++ b/Internal/src/Umbrella.Internal.Mocks/Umbrella.Internal.Mocks.csproj
@@ -14,4 +14,11 @@
     <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
