--- a/Legacy/benchmark/Umbrella.Legacy.WebUtilities.Benchmark/Umbrella.Legacy.WebUtilities.Benchmark.csproj
+++ b/Legacy/benchmark/Umbrella.Legacy.WebUtilities.Benchmark/Umbrella.Legacy.WebUtilities.Benchmark.csproj
@@ -23,4 +23,11 @@
     <ProjectReference Include="..\..\src\Umbrella.Legacy.WebUtilities\Umbrella.Legacy.WebUtilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
