--- a/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
+++ b/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
@@ -33,4 +33,11 @@
 	  </EmbeddedResource>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.33">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
