--- a/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
+++ b/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
@@ -14,6 +14,10 @@
   
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.5.22">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
   
