--- a/Core/src/Umbrella.Utilities.Mapping.Mapperly/Umbrella.Utilities.Mapping.Mapperly.csproj
+++ b/Core/src/Umbrella.Utilities.Mapping.Mapperly/Umbrella.Utilities.Mapping.Mapperly.csproj
@@ -20,6 +20,14 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.5.22">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="PolySharp" Version="1.12.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Riok.Mapperly" Version="2.6.0" />
 	</ItemGroup>
 
