Added the Enum Flags component. Updates to the UmbrellaScheduledHostedServiceWithViewSupportBase to support assigning claims.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -43,6 +43,7 @@
 
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+		<None Include="Components\EnumFlags\UmbrellaEnumFlagsCheckboxGroup.razor" />
 		<None Include="package-lock.json" />
 		<None Include="package.json" />
 		<None Include="tsconfig.json" />
