Additional components (WIP)

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -44,6 +44,9 @@
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 		<None Include="Components\EnumFlags\UmbrellaEnumFlagsCheckboxGroup.razor" />
+		<None Include="Components\Messages\ErrorMessage.razor" />
+		<None Include="Components\Messages\SuccessMessage.razor" />
+		<None Include="Components\Messages\WarningMessage.razor" />
 		<None Include="package-lock.json" />
 		<None Include="package.json" />
 		<None Include="tsconfig.json" />
