--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,7 @@
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
 		<!-- Disabling these in favour of manually adding the using statements further down. This is to ensure compatibility with legacy .NET packages.  -->
 		<ImplicitUsings>false</ImplicitUsings>
