--- a/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
+++ b/FileSystem/src/Umbrella.FileSystem.Disk/Umbrella.FileSystem.Disk.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
-		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.FileSystem.Disk.xml</DocumentationFile>
+		<NoWarn>CS1591</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
